Resolves: tdf#151722 use UI Language for localized font names

instead of system locale

Change-Id: Ie1f33644fcb8529b237db372b7d8daea19af8ede
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143706
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>